Implement updated error handling from library service Added UI feedback to indicate loading state and error status, providing better user experience during API interactions.

--- a/MintchainDropsBlazorClient/appsettings.json
+++ b/MintchainDropsBlazorClient/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiUrl": "https://mintchainapi.azurewebsites.net/api/",
+  //"ApiUrl": "https://mintchainapi.azurewebsites.net/api/",
+  "ApiUrl": "https://localhost:7036/api/",
   "AllowedHosts": "*"
 }
