Fix for handling 204 responses

--- a/MintchainDropsBlazorClient/appsettings.json
+++ b/MintchainDropsBlazorClient/appsettings.json
@@ -5,7 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"ApiUrl": "https://mintchainapi.azurewebsites.net/api/",
-  "ApiUrl": "https://localhost:7036/api/",
+  "ApiUrl": "https://mintchainapi.azurewebsites.net/api/",
   "AllowedHosts": "*"
 }
