--- a/MintchainDropsBlazorClient/appsettings.Development.json
+++ b/MintchainDropsBlazorClient/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "DetailedErrors": true,
+  "ApiUrl": "https://localhost:7036/api/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
